grafana-values/helm/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: grafana-ingress
  namespace: grafana
spec:
  rules:
  - host: grafana.polalab.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-grafana
            port:
              number: 80
